# cloud-functions-az-pmp

./: README.md
dhs-upload/: Procfile  README.md  dhs-upload.py  main.py  pyproject.toml
pmp_sftp_backup/: deploy.txt  main.py
publish_pubsub/: deploy.txt  main.py
scorecard/: Procfile  README.md  deploy.txt  drive.py  pyproject.toml  requirements.txt  scorecard.py
sftp-backup/: Procfile  README.md  pyproject.toml  sftp_backup.py
sftp_backup/: deploy.txt  main.py  requirements.txt
sub-pubsub/: deploy.txt
